recruit info updates

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -71,7 +71,7 @@
   "Assigned to": "Assigned to",
   "Follow up": "Follow up",
   "Tasks completed this month": "Tasks completed this month",
-  "Recruits completed this month": "Recruits completed this month",
+  "Recruits accepted this month": "Recruits accepted this month",
   "Total hours registered": "Total hours registered",
   "More info": "More info",
   "Comment by": "Comment by",
