--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -73,7 +73,7 @@
   "Assigned to": "Назначено ",
   "Follow up": "Следовать за",
   "Tasks completed this month": "Задачи выполненные за этот месяц",
-  "Recruits completed this month": "Лиды выполненные за этот месяц",
+  "Recruits accepted this month": "Лиды выполненные за этот месяц",
   "Total hours registered": "Общее число зарегистрированных часов",
   "More info": "Больше информации",
   "Comment by": "Оставил комментарий",
